fixed slider dot alignmentand transitions

--- a/styles/slider.module.scss
+++ b/styles/slider.module.scss
@@ -3,54 +3,50 @@
   width: 100%;
   position: relative;
   overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .slide {
-  width: 100%;
-  height: 100%;
   position: absolute;
   opacity: 0;
-  transition: opacity ease-in-out 0.4s;
+  transition: opacity ease-in-out 0.5s;
 }
 
 .active_anim {
   opacity: 1;
+
+  transition: opacity ease-in-out 0.5s;
 }
 
-.btn_slide {
+.prev {
   width: 40px;
   height: 40px;
   border-radius: 50%;
   background: #f1f1f1;
   border: 1px solid rgba(34, 34, 34, 0.287);
   position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   cursor: pointer;
-}
-
-.btn_slide_image {
-  width: 25px;
-  height: 25px;
-  pointer-events: none;
-}
-.prev {
   top: 50%;
-  left: 20px;
-  transform: translateY(-60%);
+  left: 22%;
 }
 .next {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  background: #f1f1f1;
+  border: 1px solid rgba(34, 34, 34, 0.287);
+  position: absolute;
+  cursor: pointer;
   top: 50%;
-  right: 20px;
-  transform: translateY(-60%);
+  right: 22%;
 }
 
 .container_dots {
   position: absolute;
   bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
+  // left: 50%;
+
   display: flex;
 }
 .dot {
